fix: hide dark mode

--- a/src/main.css
+++ b/src/main.css
@@ -10,4 +10,8 @@
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
   }
+
+  body {
+    background-color: #343434;
+  }
 }
